<resources>
    <string name="app_name">WorkTracks</string>
    <string name="action_settings">Settings</string>

    <string name="save">Save</string>
    <string name="vacation_sick_leave">Vacation/Sick leave</string>
    <string name="comment">Comment</string>
    <string name="duration">Σ</string>
    <string name="difference">Δ</string>
    <string name="unknown_difference">-00:00</string>
    <string name="unknown_duration">00:00</string>
    <string name="accumulated_difference">ΣΔ</string>
    <string name="cancel">Cancel</string>
    <string name="previous_week">previous week</string>
    <string name="next_week">next week</string>
    <string name="title_activity_settings">Settings</string>
    <string name="icon_attribution_link">https://www.flaticon.com/free-icon/work_1584911?term=work&amp;page=1&amp;position=54</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
