<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_sigma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/duration"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_duration"
        android:textColor="@android:color/primary_text_light" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/difference"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/text_difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_difference"
        android:textColor="@android:color/primary_text_light" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

        <TextView
        android:id="@+id/text_sigma_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/accumulated_difference"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/text_accumulated_difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_duration"
        android:textColor="@android:color/primary_text_light" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>